refactor(catalog): portal 作者列表过滤软删 + List.of + 补测试
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>